--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"@radix-ui/react-tooltip": "^1.2.8",
 		"@tanstack/react-query": "^5.90.12",
 		"@tanstack/react-table": "^8.21.3",
+		"@types/react-router-dom": "^5.3.3",
 		"@webext-core/messaging": "^2.3.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -66,6 +67,7 @@
 		"react-error-boundary": "^6.0.0",
 		"react-hook-form": "^7.69.0",
 		"react-router": "^7.10.1",
+		"react-router-dom": "^7.12.0",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.4.0",
 		"use-debounce": "^10.0.6",
