feat(mv-theme): add preset workflow and live Mediavida recoloring
Why:
Add a dedicated MV theme feature so users can customize site colors,
save/share presets, and avoid manual CSS tweaks.

What:
- Add MV theme module (store, hook, UI, presets, preview, tests) under
  features/mv-theme.
- Add early + runtime injectors to apply generated CSS at startup and on
  live updates.
- Add import/export/copy/delete flows with name sanitization
  ([A-Za-z0-9_-]) and unique-name handling.
- Add build pipeline for color rules from assets/styles/dark-mv.css via
  scripts/generate-mv-color-map.ts and generated/color-map.ts.
- Add storage integration keys, compressed persistence for MV CSS/presets,
  and migration helpers for legacy uncompressed values.
- Update editor toolbar hover behavior so injected and native icons keep
  a homogeneous white hover state.
- Harden utilities: formatBytes invalid input handling and storage
  inspector savings guardrails.

UX impact:
- New "Tema de Mediavida" page with built-in presets, custom presets,
  rename, copy, import, export, and delete actions.
- Real-time preview and clearer color-edit guidance in the editor.
- Theme changes apply immediately on Mediavida with early-load cache to
  reduce flash of original colors.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 		"test:run": "vitest run",
 		"test:coverage": "vitest run --coverage",
 		"test:ui": "vitest --ui",
-		"postinstall": "wxt prepare"
+		"postinstall": "wxt prepare",
+		"generate:mv-color-map": "tsx scripts/generate-mv-color-map.ts"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.2.2",
